# Galaxy-Simulator

./: CMakeLists.txt  loadOpenGL.sh
assets/: SimpleFragmentShader.glsl  SimpleVertexShader.glsl
src/: include.hpp  main.cpp
src/computeEngine/: initComputeEngine.cpp  initComputeEngine.hpp  planet.cpp  planet.hpp  planetCompute.cpp  planetCompute.hpp  scene.cpp  scene.hpp
src/renderEngine/: camera.cpp  camera.hpp  initOpenGL.cpp  initOpenGL.hpp  initRenderEngine.cpp  initRenderEngine.hpp  inputs.cpp  inputs.hpp  loadShaders.cpp  loadShaders.hpp  renderEngine.cpp  renderEngine.hpp  shaders.cpp  shaders.hpp  shapeRendering.cpp  shapeRendering.hpp  shapes.cpp  shapes.hpp
